Fixed some section spacing

--- a/assets/css/custom_main.css
+++ b/assets/css/custom_main.css
@@ -83,9 +83,9 @@ input, textarea {
     width: 100%;
     height: 150px;
 }
-section {
-   margin-top: 150px;
-}
+/*section {*/
+   /*margin-top: 150px;*/
+/*}*/
 section#intro {
     margin-top: 0;
 }
@@ -419,7 +419,6 @@ a::after {
     margin-bottom:-1px;
 }
 
-
 /* ========================================
 ** CONTACT SECTION
 ======================================== */
@@ -464,9 +463,6 @@ section#contact .contact-wrapper input[type="submit"]:hover {
 section#contact .contact-wrapper  a {
     color: #3dabee;
 }
-
-
-
 
 
 /* ========================================
